changes needed for java 21 .... some things are simplified