@@ -19,9 +19,9 @@
     </developers>
 
     <properties>
-        <java.compiler.source>20</java.compiler.source>
-        <java.compiler.target>20</java.compiler.target>
-        <kotlin.version>1.9.0</kotlin.version>
+        <java.compiler.source>21</java.compiler.source>
+        <java.compiler.target>21</java.compiler.target>
+        <kotlin.version>1.9.10</kotlin.version>
     </properties>
 
 
@@ -30,7 +30,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.11.0</version>
                 <configuration>
                     <source>${java.compiler.source}</source>
                     <target>${java.compiler.target}</target>
@@ -41,9 +41,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
-                    <argLine>
-                        --enable-preview --add-modules jdk.incubator.concurrent --add-exports java.base/jdk.internal.vm=ALL-UNNAMED
-                    </argLine>
+                    <argLine/>
                 </configuration>
             </plugin>
         </plugins>
@@ -70,7 +68,7 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>1.9.0</version>
+            <version>1.9.10</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
